<resources>
    <string name="app_name">Puzzle8</string>

    <!-- NAV -->
    <string name="puzzle">Puzzle</string>
    <string name="history">Historie</string>
    <string name="settings">Nastavení</string>

    <!-- GRID FRAGMENT -->
    <string name="algorithm">Algoritmus</string>
    <string name="iterationCount">Počet iterací</string>
    <string name="play">Spustit</string>

    <!-- ATTEMPT_RESULT FRAGMENT -->
    <string name="result">Výsledek</string>
    <string name="metaData">Info</string>
    <string name="success">Úspěch</string>
    <string name="usedAlgorithm">Použitý algoritmus</string>
    <string name="date">Datum</string>
    <string name="totalStepsCount">Počet pokusů celkem</string>
    <string name="rightStepsCount">Počet kroků ke správnému řešení</string>
    <string name="steps">Jednotlivé kroky</string>

    <!-- SETTINGS FRAGMENT -->
    <string name="layoutType">Rozložení</string>
    <string name="goal">Cílový stav</string>
    <string name="save">Uložit</string>
    <string name="resultIs">Zádání je:</string>
    <string-array name="layout">
        <item>3x3</item>
    </string-array>

</resources>