<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.github.petrchatrny.puzzle8.utils.DateTimeUtilKt" />

        <variable
            name="attempt"
            type="com.github.petrchatrny.puzzle8.model.entities.AttemptResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AttemptResultFragment">

        <android.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:title="@string/result"
            android:titleTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </android.widget.Toolbar>

        <TextView
            android:id="@+id/metaDataHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/metaData"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/successHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/success"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/metaDataHeading" />

        <TextView
            android:id="@+id/success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:text="@{attempt.status ? `Ano` : `Ne`}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/metaDataHeading" />

        <TextView
            android:id="@+id/usedAlgorithmHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/usedAlgorithm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/successHeading" />

        <TextView
            android:id="@+id/usedAlgorithm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:text="@{attempt.algorithm.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success" />

        <TextView
            android:id="@+id/dateHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usedAlgorithmHeading" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:text="@{DateTimeUtilKt.getDateTime(attempt.timestamp)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usedAlgorithm" />

        <TextView
            android:id="@+id/totalStepsCountHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/totalStepsCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateHeading" />

        <TextView
            android:id="@+id/totalStepsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:text="@{String.valueOf(attempt.totalSteps)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <TextView
            android:id="@+id/rightStepsCountHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/rightStepsCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalStepsCountHeading" />

        <TextView
            android:id="@+id/rightStepsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:text="@{String.valueOf(attempt.steps.size())}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalStepsCount" />

        <TextView
            android:id="@+id/stepsHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/steps"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rightStepsCountHeading" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pathRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stepsHeading"
            app:spanCount="3"
            tools:itemCount="9"
            tools:listitem="@layout/item_path_node" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>