<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.github.petrchatrny.puzzle8.model.enums.Direction" />

        <import type="com.github.petrchatrny.puzzle8.model.enums.Algorithm" />

        <variable
            name="vm"
            type="com.github.petrchatrny.puzzle8.viewModel.GridViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.GridFragment">

        <android.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:title="@string/puzzle"
            android:titleTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:onClick="@{() -> vm.randomPuzzle()}"
                android:src="@drawable/ic_dices"
                app:tint="@color/white" />

        </android.widget.Toolbar>

        <!-- GRID -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pathRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:verticalSpacing="10dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:spanCount="3"
            tools:itemCount="9"
            tools:listitem="@layout/item_number" />

        <!-- INPUTS -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdownAlgorithmLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/algorithm"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pathRecyclerView">

            <AutoCompleteTextView
                android:id="@+id/dropdownAlgorithm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/iterationsLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/iterationCount"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dropdownAlgorithmLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:text="@={vm.iterations}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- CONTROLS -->
        <Button
            android:id="@+id/solveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{() -> vm.solvePuzzle()}"
            android:text="@string/play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iterationsLayout" />

        <!-- LOADING -->
        <ProgressBar
            android:id="@+id/loading"
            style="@style/CustomProgressBarHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            android:indeterminate="false"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iterationsLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>